upgrade to parallel testing.