@@ -1,5 +1,5 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.zkoss.ztl</groupId>
 	<artifactId>ztltest</artifactId>
@@ -8,16 +8,21 @@
 	<description>A sets of testing cases for ZK project</description>
 	<properties>
 		<selenium.version>2.37.0</selenium.version>
+		<report.dir>report/</report.dir>
+		<test.dir>target/classes</test.dir>
 	</properties>
 	<repositories>
+		<repository>
+			<id>zk repository</id>
+			<url>http://mavensync.zkoss.org/maven2</url>
+		</repository>
 		<repository>
 			<id>scala-tools.org</id>
 			<name>Scala-tools Maven2 Repository</name>
 			<url>http://scala-tools.org/repo-releases</url>
-		</repository>
-		<repository>
-			<id>zk repository</id>
-			<url>http://mavensync.zkoss.org/maven2</url>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
 		</repository>
 	</repositories>
 	<licenses>
@@ -89,7 +94,7 @@
 		<dependency>
 			<groupId>org.scalatest</groupId>
 			<artifactId>scalatest_2.10</artifactId>
-			<version>2.1.3</version>
+			<version>2.1.4</version>
 		</dependency>
 		<dependency>
 			<groupId>org.scala-lang</groupId>
@@ -101,60 +106,170 @@
 			<artifactId>scala-compiler</artifactId>
 			<version>2.10.4</version>
 		</dependency>
+		<dependency>
+			<groupId>net.alchim31.maven</groupId>
+			<artifactId>scala-maven-plugin</artifactId>
+			<version>3.1.6</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-exec</artifactId>
+			<version>1.2</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<sourceDirectory>zstl/src</sourceDirectory>
 		<testSourceDirectory>zstl/test</testSourceDirectory>
 		<plugins>
 			<plugin>
-				<groupId>org.scala-tools</groupId>
-				<artifactId>maven-scala-plugin</artifactId>
-				<version>2.15.2</version>
+				<groupId>net.alchim31.maven</groupId>
+				<artifactId>scala-maven-plugin</artifactId>
+				<version>3.1.6</version>
 				<executions>
-					<execution>
-						<phase>process-resources</phase>
-						<goals>
-							<goal>add-source</goal>
-							<goal>compile</goal>
-						</goals>
-					</execution>
-					<execution>
-						<id>scala-test-compile</id>
-						<phase>process-test-resources</phase>
-						<goals>
-							<goal>testCompile</goal>
-						</goals>
-					</execution>
-				</executions>
+						<execution>
+							<id>doc</id>
+							<phase>generate-sources</phase>
+							<goals>
+								<goal>compile</goal>
+							</goals>
+						</execution>
+						<execution>
+							<id>compile</id>
+							<goals>
+								<goal>compile</goal>
+								<goal>testCompile</goal>
+							</goals>
+						</execution>
+					</executions>
 				<configuration>
-					<scalaVersion>2.9.1</scalaVersion>
-					<sendJavaToScalac>true</sendJavaToScalac>
-					<args>
-						<arg>-target:jvm-1.5</arg>
-						<arg>-g:vars</arg>
-						<arg>-deprecation</arg>
-					</args>
+					<scalaVersion>2.10.4</scalaVersion>
+					<sendJavaToScalac>false</sendJavaToScalac>
+					<sourceDir>zstl/src</sourceDir>
+					<testSourceDir>zstl/test</testSourceDir>
+					<excludes>
+						<exclude>ExampleTest.scala</exclude>
+					</excludes>
+					  <jvmArgs>
+						<jvmArg>-Xms256m</jvmArg>
+						<jvmArg>-Xmx1024m</jvmArg>
+					  </jvmArgs>
+					  <args>
+					  	 <arg>-target:jvm-1.6</arg>
+							<arg>-deprecation</arg>
+							<arg>-unchecked</arg>
+							<arg>-uniqid</arg>
+							<arg>-no-specialization</arg>
+							<arg>-encoding</arg>
+							<arg>UTF-8</arg>
+							<arg>-feature</arg>
+						</args>
 				</configuration>
 			</plugin>
+			<plugin>
+			<artifactId>maven-compiler-plugin</artifactId>
+			<version>3.1</version>
+			<executions>
+				<execution>
+					<goals>
+						<goal>compile</goal>
+						<goal>testCompile</goal>
+					</goals>
+				</execution>
+			</executions>
+			<configuration>
+				<source>1.5</source>
+				<target>1.5</target>
+			</configuration>
+		</plugin>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>build-helper-maven-plugin</artifactId>
 				<version>1.7</version>
 				<executions>
 					<execution>
-						<id>add-test-resource</id>
-						<phase>generate-test-sources</phase>
+						<id>add-resource</id>
+						<phase>generate-sources</phase>
 						<goals>
-							<goal>add-test-source</goal>
+							<goal>add-source</goal>
 						</goals>
 						<configuration>
 							<sources>
 								<source>${project.basedir}/codegen</source>
+								<source>${project.basedir}/zstl/test</source>
 							</sources>
+					<includes>
+						<include>**/*.scala</include>
+					</includes>
 						</configuration>
 					</execution>
 				</executions>
 			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.17</version>
+				<configuration>
+					<runOrder>alphabetical</runOrder>
+					<!--  <forkedProcessTimeoutInSeconds>100</forkedProcessTimeoutInSeconds>  -->
+					<testClassesDirectory>${test.dir}</testClassesDirectory>
+					<additionalClasspathElements>
+						<additionalClasspathElement>lib</additionalClasspathElement>
+					</additionalClasspathElements>
+					<includes>
+						<include>**/*Test.*</include>
+					</includes>
+					<reportsDirectory>${report.dir}</reportsDirectory>
+					<forkCount>2</forkCount>
+					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+					<reuseForks>true</reuseForks>
+				</configuration>
+			</plugin>
 		</plugins>
+		<pluginManagement>
+			<plugins>
+				<!-- This plugin's configuration is used to store Eclipse m2e settings 
+					only. It has no influence on the Maven build itself. -->
+				<plugin>
+					<groupId>org.eclipse.m2e</groupId>
+					<artifactId>lifecycle-mapping</artifactId>
+					<version>1.0.0</version>
+					<configuration>
+						<lifecycleMappingMetadata>
+							<pluginExecutions>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>org.scala-tools</groupId>
+										<artifactId>maven-scala-plugin</artifactId>
+										<versionRange>[2.15.2,)</versionRange>
+										<goals>
+											<goal>add-source</goal>
+											<goal>compile</goal>
+											<goal>testCompile</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<execute />
+									</action>
+								</pluginExecution>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>org.scalaxb</groupId>
+										<artifactId>scalaxb-maven-plugin</artifactId>
+										<versionRange>[0.6.2,)</versionRange>
+										<goals>
+											<goal>generate</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<execute />
+									</action>
+								</pluginExecution>
+							</pluginExecutions>
+						</lifecycleMappingMetadata>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
 	</build>
 </project>
